sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:9: error: not found: value i
    if (plusPetit(i - (k+1) * ecart, i - k * ecart) == false) {
                  ^AlgShellSort:9: error: not found: value i
    if (plusPetit(i - (k+1) * ecart, i - k * ecart) == false) {
                                     ^AlgShellSort:10: error: not found: value i
      echange(i - (k+1) * ecart, i - k * ecart);
              ^AlgShellSort:10: error: not found: value i
      echange(i - (k+1) * ecart, i - k * ecart);
                                 ^