sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  
  var ecart = getNombreValeurs();
  var k = 0;
  
  while (ecart >0) {
    
    if (plusPetit(i - (k+1) * ecart, i - k * ecart) == false) {
      echange(i - (k+1) * ecart, i - k * ecart);
    }
    k += 1
  }
  
  
}


  